# hermes-telemetry

./: .gitignore  AGENTS.md  BUILD-PLAN-issue-157.md  BUILD-PLAN-issue-164.md  BUILD-PLAN-issue-175.md  BUILD-PLAN-issue-190.md  BUILD-PLAN-issue-29.md  BUILD-PLAN-issue-4.md  BUILD-PLAN-issue-520.md  BUILD-PLAN-issue-8.md  CHALLENGE_ENTRY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTES.md  ONBOARDING.md  README.md  RELEASING.md  __init__.py  _cli_entrypoint.py  budget.example.yaml  budget.py  config.example.yaml  conftest.py  core_pricing.py  db.py  hermes-telemetry  local_power.py  loop_detector.py  moa.py  paths.py  plugin.yaml  poc_free_tier_id_change.py  poc_setup.py  poc_setup_cmd.py  pricing.py  pricing_backfill.py  pricing_drift.py  (+7 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.md  qa.md  show_tell.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
dashboard/: index.html  manifest.json  plugin.tsx  plugin_api.py  serve.py
dashboard_plugin/: __init__.py  _db.py  manifest.json  plugin_api.py
docs/: manual-testing-pr27.md
docs/superpowers/plans/: 2026-07-03-attribute-subagent-cron-budget.md
docs/superpowers/specs/: 2026-06-11-readme-test-count-providers-update.md  2026-07-03-attribute-subagent-cron-budget-design.md
tests/: test_budget.py  test_budget_per_profile.py  test_dashboard.py  test_dashboard_plugin_api.py  test_dashboard_plugin_isolation.py  test_db.py  test_init.py  test_isolation.py  test_local_power.py  test_logging_isolation.py  test_loop_detector.py  test_moa.py  test_moa_integration.py  test_paths.py  test_pricing.py  test_pricing_backfill.py  test_pricing_drift.py  test_pricing_hot_reload.py  test_pricing_refresh.py  test_pricing_snapshots.py  test_profile_capture.py  test_setup.py  test_stats_efficiency.py  test_stats_models.py  test_stats_providers.py  test_stats_smells.py  test_subagent_reconciliation.py  test_sync_profiles.py  test_sync_profiles_cli.py  test_telemetry_cli.py
tests/fixtures/: pricing.yaml
tools/: install-desktop-plugin.sh  seed_demo_data.py
